2005-11-02  Adam Jocksch  <ajocksch@redhat.com>

	* test/SourceWinRunner.java (mainSourceWin): Now looks for the test .cpp
	files in the post install directory.

2005-11-02  Adam Jocksch  <ajocksch@redhat.com>

	* test/SourceWinRunner.java (main): Changed so that the generated dom 
	has multiple stack frames.
	(mainSourceWin): Ditto.

2005-11-02  Phil Muldoon  <pmuldoon@redhat.com>

	* FryskGui.java (mainGui): set MainWindow.showAll()
	* glade/procpop.glade: Set default visible property
	on Procpop, CustomObserver, Preferences, and ProgramAdd
	windows to false (to stop painting on load).

	* glade/procpop.glade: ProgramAdd. Reworked. Changed
	FileChooser. Added Name component and label guides.

2005-11-01  Phil Muldoon  <pmuldoon@redhat.com>

	* glade/procpop.glade: Removed stray alignment to fix
	scrollbar on observer listbox, and to fix bz 1563
	like symptoms.

2005-11-01  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source_prefs.glade: Changed layout of syntax highlighting
	section, added tags for classes.

2005-10-28  Phil Muldoon  <pmuldoon@redhat.com>

        glade/procpop.glade: Removed Program pane
	Entry. Removed Add button. Made scrollbars
	automatic on Program pane scrolled window.

2005-10-27  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source.glade: Changed minimum width of window so that
	all comboboxes are always visible.

2005-10-27  Phil Muldoon  <pmuldoon@redhat.com>

        glade/procpop.glade: Changed programAddWindow's
	TreeView name to a avoid collisions with
	procpop's program TreeView.

2005-10-17  Adam Jocksch  <ajocksch@redhat.com>

	* glade/frysk_source.glade: Removed file combobox (replaced by side pane).
	* test/SourceWinRunner.java (mainSourceWin): Changed to mimic main.
	(main): Added commented out code to print the dom after creation.

2005-10-27  Sami Wagiaalla  <swagiaal@redhat.com>

	* glade/procpop.glade: Removed stray alignment object 
	(fixed bz 1563).

2005-10-26  Phil Muldoon  <pmuldoon@redhat.com>
