@@ -48,6 +48,7 @@ import org.gnu.gtk.Gtk;
 import frysk.Config;
 
 import frysk.gui.srcwin.SourceWindow;
+import frysk.gui.srcwin.SourceWindowFactory;
 import frysk.gui.srcwin.StackLevel;
 import frysk.gui.srcwin.dom.DOMFrysk;
 import frysk.gui.srcwin.dom.DOMSource;
@@ -70,8 +71,8 @@ public class SourceWinRunner {
 		DOMFrysk dom = DOMTestGUIBuilder.makeTestDOM();
 		DOMSource source = dom.getImage("test6").getSource("test3.cpp");
 		source.setFileName("test3.cpp");
-		source.setFilePath("../frysk/frysk-gui/frysk/gui/srcwin/testfiles");
-		BufferedReader reader = new BufferedReader(new FileReader(new File("../frysk/frysk-gui/frysk/gui/srcwin/testfiles/test3.cpp")));
+		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+		BufferedReader reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test3.cpp")));
 		int line = 1;
 		int offset = 0;
 		while(reader.ready()){
@@ -84,8 +85,8 @@ public class SourceWinRunner {
 		
 		source = dom.getImage("test6").getSource("test4.cpp");
 		source.setFileName("test4.cpp");
-		source.setFilePath("../frysk/frysk-gui/frysk/gui/srcwin/testfiles");
-		reader = new BufferedReader(new FileReader(new File("../frysk/frysk-gui/frysk/gui/srcwin/testfiles/test4.cpp")));
+		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+		reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test4.cpp")));
 		line = 1;
 		offset = 0;
 		while(reader.ready()){
@@ -98,8 +99,8 @@ public class SourceWinRunner {
 		
 		source = dom.getImage("test6").getSource("test5.cpp");
 		source.setFileName("test5.cpp");
-		source.setFilePath("../frysk/frysk-gui/frysk/gui/srcwin/testfiles");
-		reader = new BufferedReader(new FileReader(new File("../frysk/frysk-gui/frysk/gui/srcwin/testfiles/test5.cpp")));
+		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
+		reader = new BufferedReader(new FileReader(new File(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles/test5.cpp")));
 		line = 1;
 		offset = 0;
 		while(reader.ready()){
@@ -112,7 +113,7 @@ public class SourceWinRunner {
 		
 		source = dom.getImage("test6").getSource("test6.cpp");
 		source.setFileName("test6.cpp");
-		source.setFilePath("../frysk/frysk-gui/frysk/gui/srcwin/testfiles");
+		source.setFilePath(Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/srcwin/testfiles");
 //		reader = new BufferedReader(new FileReader(new File("../frysk/frysk-gui/frysk/gui/srcwin/testfiles/test6.cpp")));
 //		line = 1;
 //		offset = 0;
@@ -126,8 +127,9 @@ public class SourceWinRunner {
 		
 		SourceWindow s = new SourceWindow(
 				new String[] {"frysk-gui/frysk/gui/glade/", 
-								"../frysk/frysk-gui/frysk/gui/glade/"},
-				"../frysk/frysk-gui/frysk/gui/images/",
+								Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/glade/",
+								Config.GLADEDIR},
+				new String[] {Config.ABS_SRCDIR+"/../frysk-gui/frysk/gui/images/", Config.PKGDATADIR+"/images"},
 				dom,
 				stack1);
 		
@@ -146,80 +148,10 @@ public class SourceWinRunner {
 	public static void mainSourceWin(String[] args, String[] paths, String imageDir){
 		Gtk.init(args);
 		
-		try{
-			DOMFrysk dom = DOMTestGUIBuilder.makeTestDOM();
-			DOMSource source = dom.getImage("test6").getSource("test3.cpp");
-			source.setFileName("test3.cpp");
-			source.setFilePath(Config.PKGDATADIR+"/samples");
-			BufferedReader reader = new BufferedReader(new FileReader(new File("../frysk/frysk-gui/frysk/gui/srcwin/testfiles/test3.cpp")));
-			int line = 1;
-			int offset = 0;
-			while(reader.ready()){
-				String text = reader.readLine()+"\n";
-				System.out.print(text);
-				source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
-				offset += text.length();
-			}
-			StackLevel stack1 = new StackLevel(source, 2);
-			
-			source = dom.getImage("test6").getSource("test4.cpp");
-			source.setFileName("test4.cpp");
-			source.setFilePath(Config.PKGDATADIR+"/samples");
-			reader = new BufferedReader(new FileReader(new File("../frysk/frysk-gui/frysk/gui/srcwin/testfiles/test4.cpp")));
-			line = 1;
-			offset = 0;
-			while(reader.ready()){
-				String text = reader.readLine()+"\n";
-				source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
-				offset += text.length();
-			}
-			StackLevel stack2 = new StackLevel(source, 2);
-			stack1.addNextScope(stack2);
-			
-			source = dom.getImage("test6").getSource("test5.cpp");
-			source.setFileName("test5.cpp");
-			source.setFilePath(Config.PKGDATADIR+"/samples");
-			reader = new BufferedReader(new FileReader(new File("../frysk/frysk-gui/frysk/gui/srcwin/testfiles/test5.cpp")));
-			line = 1;
-			offset = 0;
-			while(reader.ready()){
-				String text = reader.readLine()+"\n";
-				source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
-				offset += text.length();
-			}
-			StackLevel stack3 = new StackLevel(source, 2);
-			stack2.addNextScope(stack3);
-			
-			source = dom.getImage("test6").getSource("test6.cpp");
-			source.setFileName("test6.cpp");
-			source.setFilePath(Config.PKGDATADIR+"/samples");
-	//		reader = new BufferedReader(new FileReader(new File("../frysk/frysk-gui/frysk/gui/srcwin/testfiles/test6.cpp")));
-	//		line = 1;
-	//		offset = 0;
-	//		while(reader.ready()){
-	//			String text = reader.readLine()+"\n";
-	//			source.addLine(line++, text, !text.startsWith("//"), false, false, offset, BigInteger.valueOf(255));
-	//			offset += text.length();
-	//		}
-			StackLevel stack4 = new StackLevel(source, 10);
-			stack3.addNextScope(stack4);
-			
-			SourceWindow s = new SourceWindow(
-					paths, imageDir,
-					dom,
-					stack1);
-			
-			s.getClass();
-		}
-		catch(Exception e){
-			
-		}
-//		try {
-//			XMLOutputter outputter = new XMLOutputter(Format.getPrettyFormat());
-//			outputter.output(dom.getDOMFrysk(), System.out);
-//		} catch (java.io.IOException e) {
-//			e.printStackTrace();
-//		}
+		SourceWindowFactory.setDummyPath(Config.PKGDATADIR);
+		SourceWindowFactory.setImagePaths(new String[] {Config.PKGDATADIR+"/images", Config.SRCDIR+"/frysk-gui/frysk/gui/images"});
+		SourceWindowFactory.setGladePaths(new String[] {Config.GLADEDIR, Config.SRCDIR+"/frysk-gui/frysk/gui/glade"});
+		SourceWindowFactory.createSourceWindow(null);
 		
 		Gtk.main();
 	}
