@@ -1,3 +1,8 @@
+2005-11-03  Adam Jocksch  <ajocksch@redhat.com>
+
+	* test/SourceWinRunner.java (main): Now uses paths out of Config.java.
+	(mainSourceWin): Now uses SourceWindowFactory to create a new instance.
+
 2005-11-02  Adam Jocksch  <ajocksch@redhat.com>
 
 	* test/SourceWinRunner.java (mainSourceWin): Now looks for the test .cpp
